# prosper-challenge-agent-copilot

./: .gitignore  Makefile  README.md  decisions.md  solution.md
.claude/skills/pr-review/: SKILL.md
backend/: .env.example  bot.py  call_log.py  call_recorder.py  call_store.py  copilot.py  example_flow2.json  prompts.py  pyproject.toml  requirements.txt  store.py
backend/agent_builder/: __init__.py  builder.py  schema.py  validation.py
backend/data/: example_flow.json  example_flow2.json  mock_calls.json
backend/routes/: __init__.py  agents.py  copilot.py  tools.py
backend/tests/: conftest.py  llm_helpers.py  test_agent_builder.py  test_call_recorder.py  test_call_store.py  test_copilot.py  test_prompts.py  test_resilience.py  test_tool_calling.py  test_tool_catalog.py  test_tools.py  test_validate_endpoint.py  test_validation.py
backend/tools/: __init__.py  booking_store.py  crm_store.py  handlers.py  human_handoff.py  notifications.py  registry.py  resilience.py  scheduler.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AgentCanvas.tsx  AgentEdge.tsx  AgentNode.tsx  AgentPicker.tsx  AgentSettingsPanel.tsx  AppBrand.tsx  CallLogSheet.tsx  CopilotBuildTab.tsx  CopilotChat.tsx  CopilotImproveTab.tsx  CopilotPanel.tsx  DiffReviewPanel.tsx  EdgeInspector.tsx  NodeInspector.tsx  ValidationPanel.tsx
frontend/src/hooks/: useAgentEditor.ts  useToolCatalog.tsx
frontend/src/lib/: agentDiff.ts  agentGraph.ts  agentMutations.ts  api.ts  toolCatalog.ts  validationPrompt.ts
frontend/src/types/: agent.ts  callLog.ts  copilot.ts
specs/: README.md  agent-copilot.md  agent-schema-and-builder.md  agent-tools.md  voice-agent-builder-ui.md
